--- a/kalaha/WebContent/index.html
+++ b/kalaha/WebContent/index.html
@@ -42,22 +42,26 @@
 		<button v-if="!gameIsActive" @click="startGame">Start Game</button>
 		
 		<div id="board" v-else v-cloak>
+				
+			<p>Winner: {{game.winner == 2 ? "It's a match" : game.winner}}</p>
+			<p>Next Turn: {{nextTurn}}</p>
+			
 			<table class="outer-board">
 				<tr>
-					<!-- Player 2 -->
-					<td class="big-pit">{{game.players[1].score}}</td>
+					<!-- Player 1 -->
+					<td class="big-pit">Player 1: {{game.players[1].score}}</td>
 					<td>
 						<table class="inner-board">
-							<!-- Player 2 -->
+							<!-- Player 1 -->
 							<tr><td v-for="(pit, index) in game.players[1].pits"
 							@click="choosePit(1, index)">{{pit}}</td></tr>
-							<!-- Player 1 -->
+							<!-- Player 0 -->
 							<tr><td v-for="(pit, index) in game.players[0].pits"
 							@click="choosePit(0, index)">{{pit}}</td></tr>
 						</table>
 					</td>
-					<!-- Player 1 -->
-					<td class="big-pit">{{game.players[0].score}}</td>
+					<!-- Player 0 -->
+					<td class="big-pit">Player 0: {{game.players[0].score}}</td>
 				</tr>
 			</table>
 		</div>
