--- a/kalaha/WebContent/index.html
+++ b/kalaha/WebContent/index.html
@@ -43,25 +43,25 @@
 		
 		<div id="board" v-else v-cloak>
 			<button @click="startGame">Restart Game</button>
-			<p>Winner: {{winner}}</p>
-			<p>Next Turn: {{nextPlayerStr}}</p>
+			<p>{{winnerStr}}</p>
+			<p v-if="nextPlayerStr">Next Turn: {{nextPlayerStr}}</p>
 			
 			<table class="outer-board">
 				<tr>
-					<!-- Player 1 -->
-					<td class="big-pit">Player 1: {{game.players[1].score}}</td>
+					<!-- Player 2 -->
+					<td class="big-pit">Player 2: {{game.players[1].score}}</td>
 					<td>
 						<table class="inner-board">
-							<!-- Player 1 -->
-							<tr><td v-for="(pit, index) in game.players[1].pits"
+							<!-- Player 2 -->
+							<tr><td class="pit-player2" v-for="(pit, index) in game.players[1].pits"
 							@click="choosePit(1, index)">{{pit}}</td></tr>
-							<!-- Player 0 -->
-							<tr><td v-for="(pit, index) in game.players[0].pits"
+							<!-- Player 1 -->
+							<tr><td class="pit-player1" v-for="(pit, index) in game.players[0].pits"
 							@click="choosePit(0, index)">{{pit}}</td></tr>
 						</table>
 					</td>
-					<!-- Player 0 -->
-					<td class="big-pit">Player 0: {{game.players[0].score}}</td>
+					<!-- Player 1 -->
+					<td class="big-pit">Player 1: {{game.players[0].score}}</td>
 				</tr>
 			</table>
 		</div>
