--- a/kalaha/WebContent/index.html
+++ b/kalaha/WebContent/index.html
@@ -6,7 +6,7 @@
 	<link type="text/css" rel="stylesheet" href="resources/css/main.css" />
 </head>
 <body>
-	<nav><h1>Kalaha</h1></nav>
+	<nav><h1>Kalaha</h1><a target="_blank" href="http://kalaha.krus.dk/">See Rules</a></br></nav>
 	
 	<div id="alert">
 		<p id="alert-msg"></p>
